fixed a link and align on a p item

--- a/stylesheets/partials/_fulhack.scss
+++ b/stylesheets/partials/_fulhack.scss
@@ -26,6 +26,9 @@
 			section {
 				margin-bottom: 1vh;
 			}
+			p {
+				text-align: center;
+			}
 		}
 	}
 
